# UFCScraper

./: .gitignore  README.md  pyproject.toml
UFCScraper/: README.md  fighters.csv  fights.csv  fix_csvs.py  forbidden_response.html  individuals.csv  middlewares.py  response.html  settings.py
UFCScraper/backups/: individuals.bak.csv  individuals10032023.csv
UFCScraper/spiders/: bfo_scraper.py  ufc_fighter_scraper.py  ufc_scraper.py
tests/: tests.py
