[tool.poetry]
name = "ufcscraper"
version = "0.1.0"
description = ""
authors = ["Dan Mc <danhmcinerney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
scrapy = "^2.13.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
